# cqed-rhf

./: .gitignore  README.md  example_guide.md  pyproject.toml  pytest.ini
depricated_examples/nitrobenzene/: meta_gradient_scan.py  ortho_opt.py
depricated_examples/optimization/: h2o_optimization.py  nitrobenzene_ortho_opt.py
depricated_examples/water/: h2o_energy_gradient.py  water_df.py
examples/: gradient_analytic_vs_fd.py  h2o_optimization.py  optimize_vs_psi4.py
examples/nitrobenzene/: .ortho_gradient_scan.py.swp  .water.py.swp  meta_gradient_compare_torques.py  meta_gradient_scan.py  nitro_coord_test.ipynb  nitro_time.py  ortho_MD_orientation_tracker.py  ortho_gradient_scan.py  ortho_time.py  para_gradient_scan.py  profiler_interp.ipynb  water.py
examples/nitrobenzene/CCSD_INPUT_GENERATOR/: write_exachem_qedcc_input_com_at_origin.ipynb
examples/nitrobenzene/COORDINATE_TRANSFORMATION/: .para_coordinates_com_at_origin.txt.swp  coord_transform.py  coordinate_transformation_helper.ipynb  meta_coordinates_com_at_origin.txt  ortho_coordinates_com_at_origin.txt  para_coordinates_com_at_origin.txt
examples/nitrobenzene/META/: meta_gradient_scan.py
examples/optimization/: .nitrobenzene_ortho_opt.py.swp  nitrobenzene_ortho_opt.py  optimize_vs_psi4.py
examples/water/: .water_df.py.swp  h2o_regression.py  water_df.py
src/cqed_rhf/: __init__.py  calculator.py  drivers.py  gradients.py  scf.py  utils.py  version.py
src/cqed_rhf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_df_water_regression.py  test_lambda_zero_regression.py
(+15 files in other folders)
